meson: Add build configuration summary

--- a/meson.build
+++ b/meson.build
@@ -62,14 +62,14 @@ if get_option('gtk')
 endif
 
 
-cdaudio_enabled = false
+have_cdaudio = false
 if get_option('cdaudio')
   libcdio_dep = dependency('libcdio', version: '>= 0.70', required: false)
   libcdio_cdda_dep = dependency('libcdio_cdda', version: '>= 0.70', required: false)
   libcddb_dep = dependency('libcddb', version: '>= 1.2.1', required: false)
 
   if libcdio_dep.found() and libcdio_cdda_dep.found() and libcddb_dep.found()
-    cdaudio_enabled = true
+    have_cdaudio = true
   endif
 endif
 
@@ -80,6 +80,10 @@ cxx = meson.get_compiler('cpp')
 
 math_dep = cxx.find_library('m', required: false)
 samplerate_dep = dependency('samplerate', required: false)
+
+
+have_darwin = host_machine.system() == 'darwin'
+have_windows = host_machine.system() == 'windows'
 
 
 if cc.get_id() in ['gcc', 'clang']
@@ -114,16 +118,16 @@ endif
 
 
 # XXX - investigate to see if we can do better
-if host_machine.system() == 'windows'
+if have_windows
   conf.set_quoted('PLUGIN_SUFFIX', '.dll')
-elif host_machine.system() == 'darwin'
+elif have_darwin
   conf.set_quoted('PLUGIN_SUFFIX', '.dylib')
 else
   conf.set_quoted('PLUGIN_SUFFIX', '.so')
 endif
 
 
-if host_machine.system() == 'windows'
+if have_windows
   conf.set('EXPORT', '__declspec(dllexport)')
 elif cxx.has_argument('-fvisibility=default')
   conf.set('EXPORT', '__attribute__((visibility("default")))')
@@ -170,5 +174,156 @@ if get_option('gtk')
 endif
 
 
+if get_option('qt') or get_option('gtk')
+  conf.set10('USE_GTK_OR_QT', true)
+endif
+
+
 subdir('src')
 subdir('po')
+
+
+if meson.version().version_compare('>= 0.53')
+  summary({
+    'Prefix': get_option('prefix'),
+    'Bin dir': get_option('bindir'),
+    'Lib dir': get_option('libdir'),
+    'Data dir': get_option('datadir'),
+  }, section: 'Directories')
+
+  summary({
+    'Qt support': conf.has('USE_QT'),
+    'GTK support': conf.has('USE_GTK'),
+  }, section: 'GUI Toolkits')
+
+  summary({
+    'Audio CD': get_variable('have_cdaudio', false),
+    'Free Lossless Audio Codec': get_variable('have_flac', false),
+    'Ogg Vorbis': get_variable('have_vorbis', false),
+    'MIDI (via FluidSynth)': get_variable('have_amidiplug', false),
+    'MPEG-1 Layer I/II/III (via mpg123)': get_variable('have_mpg123', false),
+    'MPEG-2/4 AAC': get_variable('have_aac', false),
+    'WavPack': get_variable('have_wavpack', false),
+  }, section: 'Audio Formats')
+
+  summary({
+    'FFmpeg/Libav': get_variable('have_ffaudio', false),
+    'Libsndfile': get_variable('have_sndfile', false),
+  }, section: 'External Decoders')
+
+  summary({
+    'AdLib synthesizer (adplug)': get_variable('have_adplug', false),
+    'Commodore 64 audio (sid)': get_variable('have_sid', false),
+    'Game Music Emu (spc, nsf, gbs, etc.)': true,
+    'ModPlug': get_variable('have_modplug', false),
+    'OpenMPT': get_variable('have_openmpt', false),
+    'Nintendo DS audio (xsf)': true,
+    'PlayStation audio (psf/psf2)': true,
+    'Vortex Tracker (vtx)': true,
+  }, section: 'Chiptunes')
+
+  summary({
+    'Metronome': true,
+    'Tone Generator': true,
+  }, section: 'Other Inputs')
+
+  summary({
+    'Bauer stereophonic-to-binaural (bs2b)': get_variable('have_bs2b', false),
+    'Channel Mixer': true,
+    'Crystalizer': true,
+    'Dynamic Range Compressor': true,
+    'Echo/Surround': true,
+    'Extra Stereo': true,
+    'LADSPA Host (requires GTK)': conf.has('USE_GTK'),
+    'Sample Rate Converter': get_variable('have_resample', false),
+    'Silence Removal': true,
+    'SoX Resampler': get_variable('have_soxr', false),
+    'Speed and Pitch': get_variable('have_speedpitch', false),
+    'Voice Removal': true,
+  }, section: 'Effects')
+
+  summary({
+    'Advanced Linux Sound Architecture': get_variable('have_alsa', false),
+    'Jack Audio Connection Kit': get_variable('have_jack', false),
+    'Open Sound System': get_variable('have_oss4', false),
+    'PulseAudio': get_variable('have_pulse', false),
+    'Simple DirectMedia Layer': get_variable('have_sdlout', false),
+    'Sndio': get_variable('have_sndio', false),
+    'Win32 waveOut': have_windows,
+    'FileWriter': get_option('filewriter'),
+    '  -> MP3 encoding': conf.has('FILEWRITER_MP3'),
+    '  -> Vorbis encoding': conf.has('FILEWRITER_VORBIS'),
+    '  -> FLAC encoding': conf.has('FILEWRITER_FLAC'),
+  }, section: 'Outputs')
+
+  summary({
+    'Cue sheets': get_variable('have_cue', false),
+    'M3U playlists': true,
+    'Microsoft ASX (legacy)': true,
+    'Microsoft ASX 3.0': get_variable('have_asx3', false),
+    'PLS playlists': true,
+    'XML Sharable Playlist Format (XSPF)': get_variable('have_xspf', false),
+  }, section: 'Playlists')
+
+  summary({
+    'FTP, SFTP, SMB (via GIO)': true,
+    'HTTP/HTTPS (via neon)': get_variable('have_neon', false),
+    'MMS (via libmms)': get_variable('have_mms', false),
+  }, section: 'Transports')
+
+  summary({
+    'Alarm (requires GTK)': conf.has('USE_GTK'),
+    'Ampache browser (requires Qt)': get_variable('have_ampache', false),
+    'Delete Files': conf.has('USE_GTK_OR_QT'),
+    'Libnotify OSD': get_variable('have_notify', false),
+    'Linux Infrared Remote Control (LIRC)': get_variable('have_lirc', false),
+    'MPRIS 2 Server': get_variable('have_mpris2', false),
+    'Scrobbler 2.0': get_variable('have_scrobbler2', false),
+    'Song Change': get_option('songchange'),
+  }, section: 'General')
+
+  if conf.has('USE_QT')
+    summary({
+      'Qt Multimedia output': get_variable('have_qtaudio', false),
+      'Qt Interface': true,
+      'Winamp Classic Interface': true,
+      'Album Art': true,
+      'Blur Scope': true,
+      'Lyrics Viewer': get_variable('have_lyrics', false),
+      'OpenGL Spectrum Analyzer': get_variable('have_qtglspectrum', false),
+      'Playlist Manager': true,
+      'Search Tool': true,
+      'Song Info': true,
+      'Spectrum Analyzer (2D)': true,
+      'Status Icon': true,
+      'Stream Tuner (experimental)': get_variable('have_streamtuner', false),
+      'VU Meter': get_option('vumeter'),
+      'X11 Global Hotkeys': get_variable('have_qthotkey', false),
+    }, section: 'Qt Support')
+  endif
+
+  if conf.has('USE_GTK')
+    summary({
+      'GTK Interface': true,
+      'Winamp Classic Interface': true,
+      'Album Art': true,
+      'Blur Scope': true,
+      'OpenGL Spectrum Analyzer': get_variable('have_glspectrum', false),
+      'Playlist Manager': true,
+      'Search Tool': true,
+      'Spectrum Analyzer (2D)': true,
+      'Status Icon': true,
+      'X11 Global Hotkeys': get_variable('have_hotkey', false),
+      'X11 On-Screen Display (aosd)': get_variable('have_aosd', false),
+    }, section: 'GTK Support')
+  endif
+
+# XXX - Not yet ported to Meson
+# -----------------------------
+# if have_darwin
+#   summary({
+#     'CoreAudio Output': get_variable('have_coreaudio', false),
+#     'Media Keys': get_variable('have_mac_media_keys', false),
+#   }, section: 'Mac OS X Support')
+# endif
+endif
