--- a/src/alsa/meson.build
+++ b/src/alsa/meson.build
@@ -1,7 +1,8 @@
 alsa_dep = dependency('alsa', version: '>= 1.0.16', required: false)
+have_alsa = alsa_dep.found()
 
 
-if alsa_dep.found()
+if have_alsa
   shared_module('alsa',
     'alsa.cc',
     'config.cc',
