--- a/src/hotkey/meson.build
+++ b/src/hotkey/meson.build
@@ -1,4 +1,5 @@
 gdk_x11_dep = dependency('gdk-x11-2.0', version: gtk_req, required: false)
+have_hotkey = gdk_x11_dep.found()
 
 
 hotkey_sources = [
@@ -8,7 +9,7 @@ hotkey_sources = [
 ]
 
 
-if gdk_x11_dep.found()
+if have_hotkey
   shared_module('hotkey',
     hotkey_sources,
     dependencies: [audacious_dep, audgui_dep, gtk_dep, glib_dep, gdk_x11_dep],
