--- a/src/jack/meson.build
+++ b/src/jack/meson.build
@@ -4,8 +4,10 @@ if not jack_dep.found()
   jack_dep = dependency('jack', version: ['>= 0.120.1', '< 1.0'], required: false)
 endif
 
+have_jack = jack_dep.found()
 
-if jack_dep.found()
+
+if have_jack
   shared_module('jack-ng',
     'jack-ng.cc',
     dependencies: [audacious_dep, jack_dep],
