--- a/src/mpg123/meson.build
+++ b/src/mpg123/meson.build
@@ -1,7 +1,8 @@
 mpg123_dep = dependency('libmpg123', version: '>= 1.12', required: false)
+have_mpg123 = mpg123_dep.found()
 
 
-if mpg123_dep.found()
+if have_mpg123
   shared_module('madplug',
     'mpg123.cc',
     dependencies: [audacious_dep, mpg123_dep, audtag_dep],
