--- a/src/oss4/meson.build
+++ b/src/oss4/meson.build
@@ -11,16 +11,16 @@ oss_sources = [
 
 
 if cxx.has_header('sys/soundcard.h', args: '-I' + oss_inc)
-  have_oss = true
+  have_oss4 = true
   conf.set10('HAVE_SYS_SOUNDCARD_H', true)
 elif cxx.has_header('soundcard.h', args: '-I' + oss_inc)
-  have_oss = true
+  have_oss4 = true
 else
-  have_oss = false
+  have_oss4 = false
 endif
 
 
-if have_oss
+if have_oss4
   cmd = run_command('test', '-d', oss_inc)
   if cmd.returncode() == 0
     oss_inc_dirs += oss_inc
