--- a/src/qthotkey/meson.build
+++ b/src/qthotkey/meson.build
@@ -1,7 +1,8 @@
 qtx11extras_dep = dependency('qt5', version: qt_req, required: false, modules: ['X11Extras'])
+have_qthotkey = qtx11extras_dep.found()
 
 
-if qtx11extras_dep.found()
+if have_qthotkey
   shared_module('qthotkey',
     'gui.cc',
     'plugin.cc',
