--- a/src/sndio/meson.build
+++ b/src/sndio/meson.build
@@ -1,7 +1,8 @@
 sndio_dep = cxx.find_library('sndio', required: false)
+have_sndio = sndio_dep.found()
 
 
-if sndio_dep.found()
+if have_sndio
   shared_module('sndio-ng',
     'sndio.cc',
     dependencies: [audacious_dep, sndio_dep],
