--- a/src/soxr/meson.build
+++ b/src/soxr/meson.build
@@ -1,7 +1,8 @@
 soxr_dep = dependency('soxr', required: false)
+have_soxr = soxr_dep.found()
 
 
-if soxr_dep.found()
+if have_soxr
   shared_module('sox-resampler',
     'sox-resampler.cc',
     include_directories: [src_inc],
