--- a/src/speedpitch/meson.build
+++ b/src/speedpitch/meson.build
@@ -1,4 +1,7 @@
-if samplerate_dep.found()
+have_speedpitch = samplerate_dep.found()
+
+
+if have_speedpitch
   shared_module('speed-pitch',
     'speed-pitch.cc',
     include_directories: [src_inc],
