--- a/src/vorbis/meson.build
+++ b/src/vorbis/meson.build
@@ -3,8 +3,13 @@ vorbis_dep = dependency('vorbis', version: '>= 1.0', required: false)
 vorbisenc_dep = dependency('vorbisenc', version: '>= 1.0', required: false)
 vorbisfile_dep = dependency('vorbisfile', version: '>= 1.0', required: false)
 
+have_vorbis = ogg_dep.found() and \
+              vorbis_dep.found() and \
+              vorbisenc_dep.found() and \
+              vorbisfile_dep.found()
 
-if ogg_dep.found() and vorbis_dep.found()
+
+if have_vorbis
   shared_module('vorbis',
     'vcupdate.cc',
     'vcedit.cc',
