--- a/src/wavpack/meson.build
+++ b/src/wavpack/meson.build
@@ -1,7 +1,8 @@
 wavpack_dep = dependency('wavpack', version: '>= 4.31', required: false)
+have_wavpack = wavpack_dep.found()
 
 
-if wavpack_dep.found()
+if have_wavpack
   shared_module('wavpack',
     'wavpack.cc',
     dependencies: [audacious_dep, wavpack_dep, audtag_dep],
