--- a/src/ampache/meson.build
+++ b/src/ampache/meson.build
@@ -1,7 +1,8 @@
 ampache_dep = dependency('ampache_browser_1', required: false)
+have_ampache = ampache_dep.found()
 
 
-if ampache_dep.found()
+if have_ampache
   shared_module('ampache',
     'ampache.cc',
     dependencies: [audacious_dep, qt_dep, ampache_dep],
