--- a/src/bs2b/meson.build
+++ b/src/bs2b/meson.build
@@ -1,7 +1,8 @@
 bs2b_dep = dependency('libbs2b', version: '>= 3.0.0', required: false)
+have_bs2b = bs2b_dep.found()
 
 
-if bs2b_dep.found()
+if have_bs2b
   shared_module('bs2b',
     'plugin.cc',
     dependencies: [audacious_dep, bs2b_dep],
