--- a/src/glspectrum/meson.build
+++ b/src/glspectrum/meson.build
@@ -1,7 +1,8 @@
 opengl_dep = dependency('GL', required: false)
+have_glspectrum = opengl_dep.found()
 
 
-if opengl_dep.found()
+if have_glspectrum
   shared_module('gl-spectrum',
     'gl-spectrum.cc',
     dependencies: [audacious_dep, math_dep, gtk_dep, glib_dep, opengl_dep],
