--- a/src/neon/meson.build
+++ b/src/neon/meson.build
@@ -1,7 +1,7 @@
 neon_dep = dependency('neon', version: '>= 0.27', required: false)
+have_neon = neon_dep.found()
 
-
-if neon_dep.found()
+if have_neon
   shared_module('neon',
     'neon.cc',
     'cert_verification.cc',
