--- a/src/qtaudio/meson.build
+++ b/src/qtaudio/meson.build
@@ -1,7 +1,8 @@
 qt_multimedia_dep = dependency('qt5', version: qt_req, required: false, modules: ['Multimedia'])
+have_qtaudio = qt_multimedia_dep.found()
 
 
-if qt_multimedia_dep.found()
+if have_qtaudio
   shared_module('qtaudio',
     'qtaudio.cc',
     dependencies: [audacious_dep, qt_multimedia_dep],
