--- a/src/scrobbler2/meson.build
+++ b/src/scrobbler2/meson.build
@@ -1,7 +1,8 @@
 curl_dep = dependency('libcurl', version: '>= 7.9.7', required: false)
+have_scrobbler2 = curl_dep.found() and xml_dep.found()
 
 
-if curl_dep.found() and xml_dep.found()
+if have_scrobbler2
   shared_module('scrobbler',
     'scrobbler.cc',
     'scrobbler_communication.cc',
