Update translations from Transifex
New translation: Slovenian

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,7 @@ src/asx3/asx3.cc
 src/asx/asx.cc
 src/audpl/audpl.cc
 src/blur_scope/blur_scope.cc
+src/blur_scope-qt/blur_scope.cc
 src/bs2b/plugin.cc
 src/cairo-spectrum/cairo-spectrum.cc
 src/cdaudio/cdaudio-ng.cc
@@ -106,7 +107,6 @@ src/jack/jack-ng.cc
 src/ladspa/plugin.cc
 src/ladspa/plugin.h
 src/lirc/lirc.cc
-src/lyricwiki/lyricwiki.cc
 src/lyricwiki-qt/lyricwiki.cc
 src/m3u/m3u.cc
 src/metronom/metronom.cc
@@ -115,12 +115,20 @@ src/mms/mms.cc
 src/modplug/modplugbmp.cc
 src/modplug/modplugbmp.h
 src/modplug/plugin_main.cc
+src/moonstone/main_window.cc
+src/moonstone/moonstone.cc
+src/moonstone/playlist_header.cc
+src/moonstone/playlist_model.cc
+src/moonstone/playlist_selection.cc
+src/moonstone/playlist_tabs.cc
 src/mpg123/mpg123.cc
 src/mpris2/plugin.cc
 src/neon/neon.cc
 src/notify/event.cc
 src/notify/notify.cc
 src/notify/osd.cc
+src/openmpt/mpt.cc
+src/openmpt/mptwrap.h
 src/oss4/oss.h
 src/oss4/plugin.cc
 src/playlist-manager/playlist-manager.cc
@@ -131,10 +139,14 @@ src/psf/psx.h
 src/pulse/pulse_audio.cc
 src/qtaudio/qtaudio.cc
 src/qtglspectrum/gl-spectrum.cc
+src/qthotkey/gui.cc
+src/qthotkey/plugin.cc
+src/qt-spectrum/qt-spectrum.cc
 src/qtui/main_window.cc
 src/qtui/menus.cc
 src/qtui/playlist_header.cc
 src/qtui/playlist_model.cc
+src/qtui/playlist_tabs.cc
 src/qtui/qtui.cc
 src/qtui/search_bar.cc
 src/qtui/settings.cc
@@ -144,6 +156,9 @@ src/scrobbler2/config_window.cc
 src/scrobbler2/scrobbler.cc
 src/scrobbler2/scrobbler_communication.cc
 src/sdlout/sdlout.cc
+src/search-tool/library.cc
+src/search-tool-qt/library.cc
+src/search-tool-qt/search-model.cc
 src/search-tool-qt/search-tool-qt.cc
 src/search-tool/search-tool.cc
 src/sid/xmms-sid.cc
@@ -177,6 +192,10 @@ src/speedpitch/speed-pitch.cc
 src/statusicon-qt/statusicon.cc
 src/statusicon/statusicon.cc
 src/stereo_plugin/stereo.cc
+src/streamtuner/icecast-model.cc
+src/streamtuner/ihr-model.cc
+src/streamtuner/shoutcast-model.cc
+src/streamtuner/streamtuner.cc
 src/tonegen/tonegen.cc
 src/ui-common/dialogs-qt.cc
 src/voice_removal/voice_removal.cc
@@ -184,6 +203,8 @@ src/vorbis/vorbis.cc
 src/vorbis/vorbis.h
 src/vtx/info.cc
 src/vtx/vtx.cc
+src/vumeter-qt/vumeter_qt.cc
+src/vumeter-qt/vumeter_qt.h
 src/waveout/waveout.cc
 src/wavpack/wavpack.cc
 src/xsf/desmume/types.h
