Fix C++17 related errors with clang

--- a/src/sid/Makefile
+++ b/src/sid/Makefile
@@ -9,8 +9,13 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
-LD = ${CXX}
+LD := ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -DSIDDATADIR="\"$(datadir)/\"" -I../.. ${SIDPLAYFP_CFLAGS}
 LIBS += -lm ${SIDPLAYFP_LIBS}
+
+# libsidplayfp is not c++17 clean yet
+# https://sourceforge.net/p/sidplay-residfp/bugs/38/
+CXXFLAGS := $(filter-out -std=gnu++17,$(CXXFLAGS))
+CXXFLAGS += -std=gnu++11
