meson: Require only version 0.46
The features we use from version 0.50 are not rocket science.

--- a/src/aac/meson.build
+++ b/src/aac/meson.build
@@ -1,5 +1,5 @@
-faad_dep = cxx.find_library('faad', has_headers: ['neaacdec.h'], required: false)
-have_aac = faad_dep.found()
+faad_dep = cxx.find_library('faad', required: false)
+have_aac = faad_dep.found() and cxx.has_header('neaacdec.h')
 
 
 if have_aac
