meson: Remove dbus option
The MPRIS plugin can be disabled independently,
therefore the dbus option makes no sense.
Also autoconf does not support --disable-dbus.

--- a/src/meson.build
+++ b/src/meson.build
@@ -181,7 +181,7 @@ if get_option('mac-media-keys') and have_darwin
   subdir('mac-media-keys')
 endif
 
-if get_option('mpris2') and get_option('dbus') and not have_windows
+if get_option('mpris2') and not have_windows
   subdir('mpris2')
 endif
 
