--- a/src/mpris2/meson.build
+++ b/src/mpris2/meson.build
@@ -1,12 +1,12 @@
 gnome = import('gnome')
 
 
-gio_dep = dependency('gio-2.0', required: true)
+gio_dep = dependency('gio-2.0', version: glib_req, required: true)
 aud_dbus_deps = [gio_dep]
 
 
 if not have_windows
-  gio_unix_dep = dependency('gio-unix-2.0', required: true)
+  gio_unix_dep = dependency('gio-unix-2.0', version: glib_req, required: true)
   aud_dbus_deps += [gio_unix_dep]
 endif
 
