xsf: Adapt meson build file

--- a/src/xsf/meson.build
+++ b/src/xsf/meson.build
@@ -1,7 +1,7 @@
 plugin_sources = [
-  'corlett.cc',
   'plugin.cc',
-  'vio2sf.cc'
+  'sndif2sf.cc',
+  'XSFFile.cc'
 ]
 
 
@@ -10,14 +10,26 @@ desmume_sources = [
   'desmume/arm_instructions.cc',
   'desmume/bios.cc',
   'desmume/cp15.cc',
+  'desmume/emufile.cc',
   'desmume/FIFO.cc',
-  'desmume/GPU.cc',
-  'desmume/matrix.cc',
+  'desmume/firmware.cc',
   'desmume/mc.cc',
+  'desmume/metaspu.cc',
   'desmume/MMU.cc',
   'desmume/NDSSystem.cc',
+  'desmume/readwrite.cc',
+  'desmume/slot1.cc',
+  'desmume/slot1_retail.cc',
   'desmume/SPU.cc',
   'desmume/thumb_instructions.cc'
+]
+
+
+spu_sources = [
+  'spu/adpcmdecoder.cc',
+  'spu/interpolator.cc',
+  'spu/samplecache.cc',
+  'spu/sampledata.cc'
 ]
 
 
@@ -30,6 +42,7 @@ cpp_args = cxx.get_supported_arguments([
 shared_module('xsf',
   plugin_sources,
   desmume_sources,
+  spu_sources,
   dependencies: [audacious_dep, zlib_dep],
   cpp_args: cpp_args,
   name_prefix: '',
