--- a/src/qthotkey/meson.build
+++ b/src/qthotkey/meson.build
@@ -1,4 +1,9 @@
-qtx11extras_dep = dependency('qt5', version: qt_req, required: false, modules: ['X11Extras'])
+if get_option('qt6')
+  qtx11extras_dep = dependency('qt6', version: qt_req, required: false, modules: ['X11Extras'])
+else
+  qtx11extras_dep = dependency('qt5', version: qt_req, required: false, modules: ['X11Extras'])
+endif
+
 have_qthotkey = qtx11extras_dep.found()
 
 
