--- a/src/streamtuner/meson.build
+++ b/src/streamtuner/meson.build
@@ -1,4 +1,9 @@
-qtnetwork_dep = dependency('qt5', version: qt_req, required: false, modules: ['Network'])
+if get_option('qt6')
+  qtnetwork_dep = dependency('qt6', version: qt_req, required: false, modules: ['Network'])
+else
+  qtnetwork_dep = dependency('qt5', version: qt_req, required: false, modules: ['Network'])
+endif
+
 have_streamtuner = qtnetwork_dep.found()
 
 
