--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,6 +3,8 @@ option('gtk', type: 'boolean', value: true,
        description: 'Whether GTK support is enabled')
 option('qt', type: 'boolean', value: true,
        description: 'Whether Qt support is enabled')
+option('qt6', type: 'boolean', value: true,
+       description: 'Whether Qt 6 support is enabled')
 
 
 # container plugins
