--- a/src/qtaudio/meson.build
+++ b/src/qtaudio/meson.build
@@ -1,4 +1,9 @@
-qt_multimedia_dep = dependency('qt5', version: qt_req, required: false, modules: ['Multimedia'])
+if get_option('qt6')
+  qt_multimedia_dep = dependency('qt6', version: qt_req, required: false, modules: ['Multimedia'])
+else
+  qt_multimedia_dep = dependency('qt5', version: qt_req, required: false, modules: ['Multimedia'])
+endif
+
 have_qtaudio = qt_multimedia_dep.found()
 
 
