meson: Fix warnings with recent version 0.61
WARNING: You should add the boolean check kwarg to the run_command call.
         It currently defaults to false,
         but it will default to true in future releases of meson.
         See also: https://github.com/mesonbuild/meson/issues/9300

NOTICE: Future-deprecated features used:
 * 0.56.0: {'meson.source_root', 'Dependency.get_pkgconfig_variable'}

---

Dependency.get_variable() is available since Meson 0.51, released in June 2019.
I assume this requirement is acceptable and saves us from adding ugly version checks.

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('audacious-plugins', 'c', 'cpp',
         version: '4.2-devel',
-        meson_version: '>= 0.46',
+        meson_version: '>= 0.51',
         default_options: [
           'c_std=gnu99',
           'cpp_std=gnu++17',
@@ -40,21 +40,21 @@ audacious_dep = dependency('audacious', version: audacious_req, required: true)
 
 # XXX - make this its own .pc file
 audtag_dep = declare_dependency(link_args: [
-  '-L@0@'.format(audacious_dep.get_pkgconfig_variable('lib_dir')),
+  '-L@0@'.format(audacious_dep.get_variable(pkgconfig: 'lib_dir')),
   '-laudtag'
 ])
 
 
 # XXX - make this its own .pc file
 audqt_dep = declare_dependency(link_args: [
-  '-L@0@'.format(audacious_dep.get_pkgconfig_variable('lib_dir')),
+  '-L@0@'.format(audacious_dep.get_variable(pkgconfig: 'lib_dir')),
   '-laudqt'
 ])
 
 
 # XXX - make this its own .pc file
 audgui_dep = declare_dependency(link_args: [
-  '-L@0@'.format(audacious_dep.get_pkgconfig_variable('lib_dir')),
+  '-L@0@'.format(audacious_dep.get_variable(pkgconfig: 'lib_dir')),
   '-laudgui'
 ])
 
@@ -160,7 +160,7 @@ if (cxx.has_header('libintl.h'))
 endif
 
 
-install_plugindir = audacious_dep.get_pkgconfig_variable('plugin_dir')
+install_plugindir = audacious_dep.get_variable(pkgconfig: 'plugin_dir')
 
 
 conf.set_quoted('INSTALL_PLUGINDIR', install_plugindir)
