--- a/src/adplug/meson.build
+++ b/src/adplug/meson.build
@@ -3,7 +3,7 @@ have_adplug = adplug_dep.found()
 
 
 if have_adplug
-  adplug_inc = '-I' + adplug_dep.get_pkgconfig_variable('includedir')
+  adplug_inc = '-I' + adplug_dep.get_variable(pkgconfig: 'includedir')
   if cxx.has_header('adplug/nemuopl.h', args: adplug_inc)
     conf.set10('HAVE_ADPLUG_NEMUOPL_H', true)
   endif
